# nix-poetry

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: nix.yml  nix_ci.yml
package/: main.py
tests/: test_add.py  test_main.py  test_poetry.py
