[tool.poetry]
name = "package"
version = "0.1.0"
description = ""
authors = ["Name <email@example.com>"]
license = "MIT"

[tool.poetry.scripts]
package = "package.main:main"

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py311']

[tool.mypy]
strict = true

[tool.pylint.FORMAT]
output-format = "colorized"
max-line-length = 120

[tool.pylint.messages_control]
disable = [
    # Disable failure for TODO items in the codebase (code will always have TODOs).
    "fixme",
    "missing-docstring"
]


